# vid2pdf

./: .bumper.toml  .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml  requirements.txt  vid2pdf.py
.github/workflows/: lint.yml  pypi_release.yml
utils/: .gitignore
